# ppft-py

./: .pre-commit-config.yaml  .readthedocs.yaml  .rumdl.toml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/actions/setup-python-env/: action.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  scorecard.yml
docs/: requirements.txt
docs/source/: conf.py
examples/: ppft2_scipy_mkl.py  ppft3_scipy_mkl.py
scripts/: generate_test_data.py
src/ppftpy/: _ppft2.py  _ppft3.py  _utils.py
tests/: _constants.py  _helpers.py  backend_array_test.py  backend_scipy_test.py  ppft2_hypothesis_dtype_test.py  ppft2_test.py  ppft3_hypothesis_dtype_test.py  ppft3_test.py
tests/test_data/ppft2/: 2d_random_128_in.npy  2d_random_128_out_optimizedppft.npy  2d_random_128_out_ppft.npy  2d_random_128_out_slowppft.npy  2d_random_16_in.npy  2d_random_16_out_optimizedppft.npy  2d_random_16_out_ppft.npy  2d_random_16_out_slowppft.npy  2d_random_2_in.npy  2d_random_2_out_optimizedppft.npy  2d_random_2_out_ppft.npy  2d_random_2_out_slowppft.npy  2d_random_32_in.npy  2d_random_32_out_optimizedppft.npy  2d_random_32_out_ppft.npy  2d_random_32_out_slowppft.npy  2d_random_4_in.npy  2d_random_4_out_optimizedppft.npy  2d_random_4_out_ppft.npy  2d_random_4_out_slowppft.npy  2d_random_64_in.npy  2d_random_64_out_optimizedppft.npy  2d_random_64_out_ppft.npy  2d_random_64_out_slowppft.npy  2d_random_8_in.npy  2d_random_8_out_optimizedppft.npy  2d_random_8_out_ppft.npy  2d_random_8_out_slowppft.npy
tests/test_data/ppft3/: 3d_random_16_in.npy  3d_random_16_out_ppft3.npy  3d_random_16_out_ppft3_ref.npy  3d_random_16_out_slowppft3.npy  3d_random_2_in.npy  3d_random_2_out_ppft3.npy  3d_random_2_out_ppft3_ref.npy  3d_random_2_out_slowppft3.npy  3d_random_4_in.npy  3d_random_4_out_ppft3.npy  3d_random_4_out_ppft3_ref.npy  3d_random_4_out_slowppft3.npy  3d_random_8_in.npy  3d_random_8_out_ppft3.npy  3d_random_8_out_ppft3_ref.npy  3d_random_8_out_slowppft3.npy
